# rivet

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  README  acinclude.m4  aclocal.m4  addisrefdata  auto.pl  avglist  cnvdos2unix  configure.ac  countanas  foldlist  getallauthors.py  getinspirenames  index.dox  lsanas  pkgwriteinfo  plotnanas  quiet.pl  rivet-diff.py  rivetenv.csh.in  rivetenv.sh.in
Analyses/: Makefile.am
Analyses/pluginATLAS/: ATLAS_2012_I1203852.cc  ATLAS_2016_I1426515.cc  ATLAS_2016_I1458270.cc  ATLAS_2016_I1467454_MU.yoda  ATLAS_2016_I1468168.cc  ATLAS_2016_I1479760.yoda  ATLAS_2017_I1589844_EL.info  ATLAS_2017_I1589844_MU.info
Analyses/pluginCMS/: CMS_2012_I1298807.info  CMS_2015_I1370682_PARTON.cc
Analyses/pluginLEP/: ALEPH_2001_S4656318.cc  ALEPH_2014_I1267648.yoda  DELPHI_1991_I301657.yoda  OPAL_2004_I631361.yoda  SLD_2002_S4869273.cc
Analyses/pluginMisc/: BABAR_2015_I1334693.yoda  BELLE_2015_I1397632.yoda
Analyses/pluginPetra/: JADE_1983_I190818.yoda
Analysis/: AnalysisBase.cc  AnalysisBase.h  AnalysisBase.icc  Event.h  Event.icc  Makefile.am  RivetHandler.cc  RivetHandler.fh  RivetHandler.h  RivetHandler.icc  RivetInfo.cc  RivetInfo.h  RivetInfo.icc  TestMultiplicity.cc  TestMultiplicity.h  TestMultiplicity.icc
Analysis/Examples/: HZ95108.cc  HZ95108.h  HZ95108.icc  Makefile.am  TestMultiplicity.cc  TestMultiplicity.h  TestMultiplicity.icc
Projections/: BeamProjection.icc  CentralEtHCM.cc  CentralEtHCM.h  CentralEtHCM.icc  Cmp.h  Cmp.icc  DISKinematics.cc  DISKinematics.h  DISKinematics.icc  DISLepton.cc  DISLepton.h  DISLepton.icc  Event.cc  Event.h  Event.icc  FinalStateHCM.cc  FinalStateHCM.h  FinalStateHCM.icc  FinalStateProjection.cc  FinalStateProjection.h  FinalStateProjection.icc  Makefile.am  Particle.fh  Particle.h  Particle.icc  Projection.cc  Projection.fh  Projection.h  Projection.icc
analyses/: Makefile.am
analyses/binnedhistopluginLHCf/: LHCF_2012_I1115479.cc.binnedhisto
analyses/pluginALICE/: ALICE_2010_I880049.cc  ALICE_2010_I880049.info  ALICE_2010_I880049.info.orig  ALICE_2010_S8624100.cc  ALICE_2010_S8624100.info  ALICE_2010_S8624100.yoda  ALICE_2010_S8625980.cc  ALICE_2010_S8625980.info  ALICE_2010_S8625980.yoda  ALICE_2010_S8706239.cc  ALICE_2010_S8706239.yoda  ALICE_2011_S8909580.cc  ALICE_2011_S8909580.yoda  ALICE_2011_S8945144.cc  ALICE_2011_S8945144.yoda  ALICE_2012_I1116147.cc  ALICE_2012_I1116147.info  ALICE_2012_I1116147.yoda  ALICE_2012_I1126966.cc  ALICE_2012_I1126966.info  ALICE_2012_I1127497.cc  ALICE_2012_I1127497.info  ALICE_2012_I1181770.cc  ALICE_2012_I1181770.yoda  ALICE_2012_I930312.cc  ALICE_2012_I930312.info  ALICE_2012_I930312.plot  ALICE_2013_I1225979.cc  ALICE_2013_I1225979.info  ALICE_2014_I1243865.cc  ALICE_2014_I1243865.info  ALICE_2014_I1244523.cc  ALICE_2014_I1244523.info  ALICE_2014_I1244523.plot  ALICE_2014_I1244523.yoda  ALICE_2014_I1300380.cc  ALICE_2014_I1300380.yoda  ALICE_2015_I1357424.cc  ALICE_2015_I1357424.yoda  ALICE_2015_PBPBCentrality.cc  (+29 more)
analyses/pluginATLAS/: ATLAS_2010_CONF_2010_049.cc  ATLAS_2010_CONF_2010_049.yoda  ATLAS_2010_S8591806.cc  ATLAS_2010_S8591806.yoda  ATLAS_2010_S8817804.cc  ATLAS_2010_S8817804.info  ATLAS_2010_S8817804.yoda  ATLAS_2010_S8894728.cc  ATLAS_2010_S8894728.yoda  ATLAS_2010_S8914702.cc  ATLAS_2010_S8914702.info  ATLAS_2010_S8914702.yoda  (+508 more)
data/: 317.hepml.xml  3418.hepml.xml  4781.hepml.xml  743.aida  CDF_2005_S6217184.hep.xml  D0_2001_S4674421.hep.xml  D0_2004_S5992206.hep.xml  DELPHI_1996_S3430090.hep.xml  EurPhys40C287.aida  EurPhys40C287.hep.xml  FPythiaLEP10.hepmc  HepEx0112029.aida  HepEx0112029.hep.xml  HepEx0409040.aida  HepEx0409040.hep.xml  HepEx0505013.aida  HepEx0505013.hep.xml  HepEx0701051.aida  HepEx0701051.hep.xml  HepEx9506012.aida  HepEx9506012.hep.xml  Makefile  Makefile.am  Makefile.in  OPAL_2004_S6132243.hep.xml  PL273B181.aida  PL273B181.hep.xml  PRD65092002.aida  S4674421.aida  S4751469.hep.xml  ZPhys73C11.aida  ZPhys73C11.hep.xml  rivet-completion
doc/: JHEP3.cls  JHEPlogo.eps  Makefile.am  acknowledgements.tex  agilerunmc.tex  alice-papers-2010.json  alice-papers-2011.json  alice-papers-2012.json  alice-papers-2013.json  alice-papers-2014.json  alice-papers-2015.json  alice-papers-2016.json  alice-papers-2017.json  alice-papers-2018.json  analyses.bib  analyses.json  analyses.tex  appendices.tex  atlas-papers-2010.json  atlas-papers-2011.json  atlas-papers-2012.json  atlas-papers-2013.json  atlas-papers-2014.json  atlas-papers-2015.json  atlas-papers-2016.json  atlas-papers-2017.json  atlas-papers-2018.json  bend.eps  cms-papers-2010.json  cms-papers-2011.json  cms-papers-2012.json  cms-papers-2013.json  cms-papers-2014.json  cms-papers-2015.json  cms-papers-2016.json  cms-papers-2017.json  cms-papers-2018.json  compare-histos.txt  conclusions.tex  cone.eps  (+809 more)
include/: .cvsignore  Makefile.am  osdir.hh
lib/: Makefile.am
plugindemo/: Makefile  Makefile.am  MyAnalysis.cc  MyTest.cc  RootAnalysis.cc  testplugin
pyext/: Makefile.am  SWIGTest.cc  configure.ac  fixpyrivet  hepmc.i  lighthisto.py  pyrivet  pyrivet.i  rivet.i  rivet.py  rivet.py-HepMC23  rivet.py-HepMC24  rivet.py-HepMC25  rivet_wrap.cc  rivet_wrap.cc-HepMC23  rivet_wrap.cc-HepMC24  rivet_wrap.cc-HepMC25  setup.py.in  spiresbib.py
src/: Analysis.cc  AnalysisHandler.cc  AnalysisInfo.cc  AnalysisLoader.cc  BeamConstraint.cc  Commandline.cc  CommandlineRivetGun.cc  Cut.cc  Cuts.cc  Event.cc  HistoHandler.cc  Jet.cc  Makefile.am  ParamConstraint.cc  Particle.cc  Projection.cc  ProjectionApplier.cc  ProjectionHandler.cc  RivetGunInterface.cc  RivetGunInterfaceDynamic.cc  RivetGunInterfaceStatic.cc  RivetGunRunner.cc  RivetHandler.cc  RivetInfo.cc  RivetInterface.cc  RivetgunCommandline.cc  RivetgunInterface.cc  RivetgunRunner.cc  Run.cc  SWIGTest.cc  buildpy  rivetinterface.i
test/: .cvsignore  Makefile.am  SimpleLEP.in  SimpleLHC.in  buildtestloop  fTest.f  fTestFromC.cpp  runEventLoop.cc  runtestloop  testApi.cc  testBeams.cc  testCmdLine.sh  testCmp.cc  testImport.sh  testMatVec.cc  testMath.cc  testNaN.cc  testrivet.cc
(+4276 files in other folders)
