mySOURCES = AnalysisBase.cc RivetHandler.cc TestMultiplicity.cc

DOCFILES = AnalysisBase.h RivetHandler.h TestMultiplicity.h

INCLUDEFILES = $(DOCFILES) AnalysisBase.fh AnalysisBase.icc \
               RivetHandler.fh RivetHandler.icc TestMultiplicity.icc

noinst_LTLIBRARIES = libRivetAnalysis.la
libRivetAnalysis_la_SOURCES = $(mySOURCES) $(INCLUDEFILES)
